// Copyright 2021 <mzh.scnu@qq.com>. All rights reserved.
// Use of this source code is governed by a BSD-style
// license that can be found in the LICENSE file.

syntax = "proto3";

package header;


enum Compress{
	Raw = 0;
	Gzip = 1;
	Snappy = 2;
	Zlib = 3;
}

message RequestHeader {
	Compress  compress_type = 1;
	string 	method = 2;
	uint64  id = 3;
	uint32  request_len = 4;
	uint32  checksum = 5;
}

message ResponseHeader {
	Compress compress_type = 1;
	uint64 id = 2;
	string error = 3;
	uint32 response_len = 4;
	uint32 checksum = 5;
}